--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ button:hover {
   cursor: pointer;
 }
 
-p {
+li {
   margin-right: 8px;
 }
 
@@ -62,4 +62,5 @@ p {
 .list-row {
   display: flex;
   align-items: center;
+  padding-bottom: 4px;
 }
